# bunny_build

./: .gitignore  CMakeLists.txt  Kconfig  README.md
include/: bunny_build.h  bunny_build__config.h  bunny_build__config.h.in  bunny_build__instr.h  bunny_build__psuedo_instr.h  bunny_build__targets.h  ezh_arch.h  ezh_init.h
src/: (unused)bunny_build__config.h  CMakeLists.txt  EZBUILD.H  bunny_build.c  bunny_build.h  bunny_build__config.h  bunny_build__config.h.in  bunny_build__instr.c  bunny_build__instr.h  bunny_build__psuedo_instr.c  bunny_build__targets.h  ezbuild.c  ezbuild_config.h  ezh_init.c  ezh_init.h  main.c
test/: CMakeLists.txt  main.c
test/LPC55s69__hello_gpio/LPC55s69_EZH_PWM_GPIO/: .cproject  .project  hello_world.mex
test/camera_reference_generator__320_240_whole_buf/320_240_whole_buf/: data.xlsx  mcxn_ezh_camera_code_lib.uvguix.emh20  ~$data.xlsx  (+4 more)
test/cl_build/: CMakeLists.txt  bunny_build__config.h  ezh_binary.c  ezh_binary.h  main.c
test/ezh_apps/: camera_reference_test.c  camera_reference_test.h
test/lpc55s69__ezh_hello_gpio/: .cproject  .project  lpc55s69_hello_gpio JLink Debug.launch  lpc55s69_hello_gpio.mex  ozone.jdebug
test/mcx947__ezh_4bit_counter/: .cproject  .project  ezh_hello_gpio LinkServer Debug.launch  script.jlink
test/mcx947__ezh_cam/: .cproject  .project  mcx947__ezh_cam.mex  script.jlink
test/mcx947__ezh_goto/: .cproject  .project  ezh_hello_gpio LinkServer Debug.launch  ozone.jdebug  script.jlink
test/mcx947__ezh_hello_gpio/: .cproject  .project  ezh_hello_gpio LinkServer Debug.launch  ozone.jdebug  script.jlink
(+138 files in other folders)
